force-app/main/default/objects/RefundPolicy__mdt/RefundPolicy__mdt.object-meta.xml
<CustomObject>
    <description>Configuration, not data: the refund and return policy the deterministic gate enforces.</description>
    <label>Refund Policy</label>
    <pluralLabel>Refund Policies</pluralLabel>
</CustomObject>