force-app/main/default/objects/RefundPolicy__mdt/fields/AppliesToCategory__c.field-meta.xml
<CustomField>
    <fullName>AppliesToCategory__c</fullName>
    <label>Applies To Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>