force-app/main/default/objects/RefundPolicy__mdt/fields/MaxAutoRefund__c.field-meta.xml
<CustomField>
    <fullName>MaxAutoRefund__c</fullName>
    <label>Max Auto Refund</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>