force-app/main/default/objects/RefundPolicy__mdt/fields/ReturnWindowDays__c.field-meta.xml
<CustomField>
    <fullName>ReturnWindowDays__c</fullName>
    <label>Return Window Days</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>